--- a/week_2/8_gps1_1/gps1.1.html
+++ b/week_2/8_gps1_1/gps1.1.html
@@ -1,19 +1,40 @@
 <!-- 
 Write your names here:
-1. 
-2. 
+1. Dakota Cousineau
+2. Mark McQuillen
 -->
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="p0_gps1.1.css">
-    <title>Title Here</title>
-    <style>
-    
-    </style>
+    <title>Peer Pairing - How it Works</title>
   </head>
   <body>
- 
+    <h1>Peer Pairing: How it works</h1>
+    <h2>Getting Started</h2>
+    <p>It is helpful for a peer pair to check in with each before they begin coding to see how they are doing.  This fosters a human connection which can improve collaboration.  A pair should be very clear about what their goals are.  To ensure this, pairs read the instructions for the assignment carefully before beginning any work.</p>
+    <p>Then they begin discussing their ideas for how to meet the goals of the assignment and come to an agreement about how they want it to look.</p>
+    <p>Once a peer pair begins working it is very helpful for them to keep the lines of communication open.</p>
+    <center><img src="http://www.bikereader.com/BR%20pics/tandem/onbike.jpg"></center>
+    <div id="Left-Side">
+    <h2><center>Navigator</center></h2>
+    <ol><strong>Responsibilities</strong>
+    <li>Keeping the driver heading in the right direction</li>
+    <li>Overseeing the driver's work for errors</li>
+    <li>Keeping the overall picture in mind as well as the time spent on each area</li>
+    </ol>
+    </div>
+    <div id="Right-Side">
+    <h2><center>Driver</center></h2>
+        <ol><strong>Responsibilities</strong>
+            <li>Typing the code itself</li>
+            <li>Listening for direction from the navigator</li>
+        </ol>
+    </div>
+    <h2>Reflections of Peer Pairing</h2>
+    <p>Peer Pairing is extremely usuful in a learning enviroment because it allows both members of the pair to not only experience different ideas on how to solve a problem but allows for two sets of eyes for any mistakes that may have been made. It makes debugging a much simplier task. From our own experience in peer pairing we found it extremly helpful to keep the lines of communication open and not get offended by another person recommending a new idea over the one we provided. We also found it useful to let the other member of the pair to know our personality type so that they would not be offended by particular quirks in our charactor. Overall the pairing went well and we felt it was a positive learning experience. </p>
+    <p>This video highlights peer pairing <a href= "http://vimeo.com/76662569" target="Pairing is caring"Pairing is caring</a>Pairing is caring.</p>
   </body>
 </html>
