--- a/week_2/8_gps1_1/gps1.1.html
+++ b/week_2/8_gps1_1/gps1.1.html
@@ -8,9 +8,9 @@ Write your names here:
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/unit_1_week_1/stylesheets/gps1.1.css">
+    <link rel="stylesheet" href="p0_gps1.1.css">
     <title>Peer Pairing - How it Works</title>
-  </head>
+      </head>
   <body>
     <h1>Peer Pairing: How it works</h1>
     <h2>Getting Started</h2>
